--- a/view/css/float-icon/float.css
+++ b/view/css/float-icon/float.css
@@ -7,8 +7,7 @@
 
 .zoom-fab {
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 40px;
   transition: 0.2s ease-out;
   cursor: pointer;
 }
@@ -31,7 +30,7 @@
   top: 50%;
   transform: translateY(-50%);
   height: 100%;
-  width: 500px;
+  width: 240px;
   list-style: none;
   text-align: right;
 }
@@ -39,6 +38,8 @@
 .zoom-menu li {
   display: inline-block;
   margin-right: 10px;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
 }
 
 .zoom-card {
